--- a/Proyectos/tablero_ajedres/templates/index.html
+++ b/Proyectos/tablero_ajedres/templates/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Checkerboard</title>
 </head>
+<style>
+    *{
+        padding: 0;
+        margin: 0;
+        vertical-align: top;
+        box-sizing: border-box;
+    }
+
+
+    body{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+    h1{
+        padding: 10px;
+        margin: 15px 0;
+    }
+
+    table{
+        border-collapse: collapse;
+
+    }
+
+    td{
+        width: 60px;
+        height: 60px;
+    }
+</style>
 <body>
     <h1 style="background-color: {{color_two}}; color: {{color_one}};">*** CHECKERBOARD ***</h1>
     <table>
